# 3dSDL

./: CMakeLists.txt  README.md  main  main.cpp
PythonVersion/: graphics.py  settings.json
data/: dark_floor.json  floor.json  settings.json  slimything.json
